fixing button lost text on mobile view

--- a/src/Components/css/Navbar.css
+++ b/src/Components/css/Navbar.css
@@ -108,7 +108,7 @@ nav{
   background-color: white;
 }
 
-@media only screen and (max-width: 950px ){
+@media only screen and (max-width: 1160px ){
   .nav-item>li{
    display: none;
   }
@@ -116,7 +116,7 @@ nav{
     display: block;
   }
 }
-@media only screen and (min-width: 950px ){
+@media only screen and (min-width: 1160px ){
   .dropdown{
     visibility: hidden;
   }
